%YAML 1.1
%TAG !u! tag:unity3d.com,2011:
--- !u!91 &9100000
AnimatorController:
  serializedVersion: 5
  m_ObjectHideFlags: 0
  m_PrefabParentObject: {fileID: 0}
  m_PrefabInternal: {fileID: 0}
  m_Name: CTB_SwitchController
  m_AnimatorParameters:
  - m_Name: AvatarDirection
    m_Type: 3
    m_DefaultFloat: 0
    m_DefaultInt: 0
    m_DefaultBool: 0
    m_Controller: {fileID: 9100000}
  - m_Name: HandleState
    m_Type: 3
    m_DefaultFloat: 0
    m_DefaultInt: 0
    m_DefaultBool: 0
    m_Controller: {fileID: 9100000}
  m_AnimatorLayers:
  - serializedVersion: 5
    m_Name: Base Layer
    m_StateMachine: {fileID: 1107985601248101866}
    m_Mask: {fileID: 0}
    m_Motions: []
    m_Behaviours: []
    m_BlendingMode: 0
    m_SyncedLayerIndex: -1
    m_DefaultWeight: 0
    m_IKPass: 0
    m_SyncedLayerAffectsTiming: 0
    m_Controller: {fileID: 9100000}
--- !u!1107 &1107985601248101866
AnimatorStateMachine:
  serializedVersion: 5
  m_ObjectHideFlags: 1
  m_PrefabParentObject: {fileID: 0}
  m_PrefabInternal: {fileID: 0}
  m_Name: Base Layer
  m_ChildStates:
  - m_State: {fileID: 1102317097615913604}
    m_Position: {x: 0, y: 0, z: 0}
  - m_State: {fileID: 1102737246842290716}
    m_Position: {x: 250, y: 0, z: 0}
  - m_State: {fileID: 1102293258282871585}
    m_Position: {x: 500, y: 0, z: 0}
  - m_State: {fileID: 1102623215441320036}
    m_Position: {x: 0, y: 250, z: 0}
  - m_State: {fileID: 1102917026716157710}
    m_Position: {x: 250, y: 250, z: 0}
  m_ChildStateMachines: []
  m_AnyStateTransitions: []
  m_EntryTransitions: []
  m_StateMachineTransitions: {}
  m_StateMachineBehaviours: []
  m_AnyStatePosition: {x: 0, y: -250, z: 0}
  m_EntryPosition: {x: 250, y: -250, z: 0}
  m_ExitPosition: {x: 500, y: -250, z: 0}
  m_ParentStateMachinePosition: {x: 800, y: 20, z: 0}
  m_DefaultState: {fileID: 1102917026716157710}
--- !u!1102 &1102317097615913604
AnimatorState:
  serializedVersion: 5
  m_ObjectHideFlags: 1
  m_PrefabParentObject: {fileID: 0}
  m_PrefabInternal: {fileID: 0}
  m_Name: CTB_Switch_Left_Hand_Close
  m_Speed: 1
  m_CycleOffset: 0
  m_Transitions:
  - {fileID: 1101207200389291860}
  - {fileID: 1101747487258902548}
  m_StateMachineBehaviours: []
  m_Position: {x: 0, y: 0, z: 0}
  m_IKOnFeet: 0
  m_WriteDefaultValues: 1
  m_Mirror: 0
  m_SpeedParameterActive: 0
  m_MirrorParameterActive: 0
  m_CycleOffsetParameterActive: 0
  m_Motion: {fileID: 7400000, guid: 2f698ea2bc6abeb49b671ac998b31b8d, type: 2}
  m_Tag:
  m_SpeedParameter:
  m_MirrorParameter:
  m_CycleOffsetParameter:
--- !u!1101 &1101207200389291860
AnimatorStateTransition:
  serializedVersion: 3
  m_ObjectHideFlags: 1
  m_PrefabParentObject: {fileID: 0}
  m_PrefabInternal: {fileID: 0}
  m_Name:
  m_Conditions:
  - m_ConditionMode: 6
    m_ConditionEvent: AvatarDirection
    m_EventTreshold: 0
  - m_ConditionMode: 6
    m_ConditionEvent: HandleState
    m_EventTreshold: 1
  m_DstStateMachine: {fileID: 0}
  m_DstState: {fileID: 1102737246842290716}
  m_Solo: 0
  m_Mute: 0
  m_IsExit: 0
  m_TransitionDuration: 0.17647058
  m_TransitionOffset: 0
  m_ExitTime: 0.9
  m_HasExitTime: 0
  m_HasFixedDuration: 0
  m_InterruptionSource: 0
  m_OrderedInterruption: 1
  m_CanTransitionToSelf: 0
--- !u!1101 &1101747487258902548
AnimatorStateTransition:
  serializedVersion: 3
  m_ObjectHideFlags: 1
  m_PrefabParentObject: {fileID: 0}
  m_PrefabInternal: {fileID: 0}
  m_Name:
  m_Conditions:
  - m_ConditionMode: 6
    m_ConditionEvent: AvatarDirection
    m_EventTreshold: 1
  - m_ConditionMode: 6
    m_ConditionEvent: HandleState
    m_EventTreshold: 1
  m_DstStateMachine: {fileID: 0}
  m_DstState: {fileID: 1102623215441320036}
  m_Solo: 0
  m_Mute: 0
  m_IsExit: 0
  m_TransitionDuration: 0.17647058
  m_TransitionOffset: 0
  m_ExitTime: 0.9
  m_HasExitTime: 0
  m_HasFixedDuration: 0
  m_InterruptionSource: 0
  m_OrderedInterruption: 1
  m_CanTransitionToSelf: 0
--- !u!1102 &1102737246842290716
AnimatorState:
  serializedVersion: 5
  m_ObjectHideFlags: 1
  m_PrefabParentObject: {fileID: 0}
  m_PrefabInternal: {fileID: 0}
  m_Name: CTB_Switch_Left_Hand_Open
  m_Speed: 1
  m_CycleOffset: 0
  m_Transitions:
  - {fileID: 1101932609694037933}
  - {fileID: 1101713888923498502}
  m_StateMachineBehaviours: []
  m_Position: {x: 250, y: 0, z: 0}
  m_IKOnFeet: 0
  m_WriteDefaultValues: 1
  m_Mirror: 0
  m_SpeedParameterActive: 0
  m_MirrorParameterActive: 0
  m_CycleOffsetParameterActive: 0
  m_Motion: {fileID: 7400000, guid: 39bdb56fdf033ec43b1db0538e2ec580, type: 2}
  m_Tag:
  m_SpeedParameter:
  m_MirrorParameter:
  m_CycleOffsetParameter:
--- !u!1101 &1101932609694037933
AnimatorStateTransition:
  serializedVersion: 3
  m_ObjectHideFlags: 1
  m_PrefabParentObject: {fileID: 0}
  m_PrefabInternal: {fileID: 0}
  m_Name:
  m_Conditions:
  - m_ConditionMode: 6
    m_ConditionEvent: AvatarDirection
    m_EventTreshold: 0
  - m_ConditionMode: 6
    m_ConditionEvent: HandleState
    m_EventTreshold: 0
  m_DstStateMachine: {fileID: 0}
  m_DstState: {fileID: 1102317097615913604}
  m_Solo: 0
  m_Mute: 0
  m_IsExit: 0
  m_TransitionDuration: 0.17647058
  m_TransitionOffset: 0
  m_ExitTime: 0.9
  m_HasExitTime: 0
  m_HasFixedDuration: 0
  m_InterruptionSource: 0
  m_OrderedInterruption: 1
  m_CanTransitionToSelf: 0
--- !u!1101 &1101713888923498502
AnimatorStateTransition:
  serializedVersion: 3
  m_ObjectHideFlags: 1
  m_PrefabParentObject: {fileID: 0}
  m_PrefabInternal: {fileID: 0}
  m_Name:
  m_Conditions:
  - m_ConditionMode: 6
    m_ConditionEvent: AvatarDirection
    m_EventTreshold: 1
  - m_ConditionMode: 6
    m_ConditionEvent: HandleState
    m_EventTreshold: 0
  m_DstStateMachine: {fileID: 0}
  m_DstState: {fileID: 1102293258282871585}
  m_Solo: 0
  m_Mute: 0
  m_IsExit: 0
  m_TransitionDuration: 0.17647058
  m_TransitionOffset: 0
  m_ExitTime: 0.9
  m_HasExitTime: 0
  m_HasFixedDuration: 0
  m_InterruptionSource: 0
  m_OrderedInterruption: 1
  m_CanTransitionToSelf: 0
--- !u!1102 &1102293258282871585
AnimatorState:
  serializedVersion: 5
  m_ObjectHideFlags: 1
  m_PrefabParentObject: {fileID: 0}
  m_PrefabInternal: {fileID: 0}
  m_Name: CTB_Switch_Right_Hand_Close
  m_Speed: 1
  m_CycleOffset: 0
  m_Transitions:
  - {fileID: 1101247264767118869}
  - {fileID: 1101643839208922117}
  m_StateMachineBehaviours: []
  m_Position: {x: 500, y: 0, z: 0}
  m_IKOnFeet: 0
  m_WriteDefaultValues: 1
  m_Mirror: 0
  m_SpeedParameterActive: 0
  m_MirrorParameterActive: 0
  m_CycleOffsetParameterActive: 0
  m_Motion: {fileID: 7400000, guid: 70503b909b5901c4c99dd6d25142e78a, type: 2}
  m_Tag:
  m_SpeedParameter:
  m_MirrorParameter:
  m_CycleOffsetParameter:
--- !u!1101 &1101247264767118869
AnimatorStateTransition:
  serializedVersion: 3
  m_ObjectHideFlags: 1
  m_PrefabParentObject: {fileID: 0}
  m_PrefabInternal: {fileID: 0}
  m_Name:
  m_Conditions:
  - m_ConditionMode: 6
    m_ConditionEvent: AvatarDirection
    m_EventTreshold: 1
  - m_ConditionMode: 6
    m_ConditionEvent: HandleState
    m_EventTreshold: 1
  m_DstStateMachine: {fileID: 0}
  m_DstState: {fileID: 1102623215441320036}
  m_Solo: 0
  m_Mute: 0
  m_IsExit: 0
  m_TransitionDuration: 0.17647058
  m_TransitionOffset: 0
  m_ExitTime: 0.9
  m_HasExitTime: 0
  m_HasFixedDuration: 0
  m_InterruptionSource: 0
  m_OrderedInterruption: 1
  m_CanTransitionToSelf: 0
--- !u!1101 &1101643839208922117
AnimatorStateTransition:
  serializedVersion: 3
  m_ObjectHideFlags: 1
  m_PrefabParentObject: {fileID: 0}
  m_PrefabInternal: {fileID: 0}
  m_Name:
  m_Conditions:
  - m_ConditionMode: 6
    m_ConditionEvent: AvatarDirection
    m_EventTreshold: 0
  - m_ConditionMode: 6
    m_ConditionEvent: HandleState
    m_EventTreshold: 1
  m_DstStateMachine: {fileID: 0}
  m_DstState: {fileID: 1102737246842290716}
  m_Solo: 0
  m_Mute: 0
  m_IsExit: 0
  m_TransitionDuration: 0.17647058
  m_TransitionOffset: 0
  m_ExitTime: 0.9
  m_HasExitTime: 0
  m_HasFixedDuration: 0
  m_InterruptionSource: 0
  m_OrderedInterruption: 1
  m_CanTransitionToSelf: 0
--- !u!1102 &1102623215441320036
AnimatorState:
  serializedVersion: 5
  m_ObjectHideFlags: 1
  m_PrefabParentObject: {fileID: 0}
  m_PrefabInternal: {fileID: 0}
  m_Name: CTB_Switch_Right_Hand_Open
  m_Speed: 1
  m_CycleOffset: 0
  m_Transitions:
  - {fileID: 1101252446247485774}
  - {fileID: 1101016336858599777}
  m_StateMachineBehaviours: []
  m_Position: {x: 0, y: 250, z: 0}
  m_IKOnFeet: 0
  m_WriteDefaultValues: 1
  m_Mirror: 0
  m_SpeedParameterActive: 0
  m_MirrorParameterActive: 0
  m_CycleOffsetParameterActive: 0
  m_Motion: {fileID: 7400000, guid: ce468675e6ac4164f83e1146c15a66a4, type: 2}
  m_Tag:
  m_SpeedParameter:
  m_MirrorParameter:
  m_CycleOffsetParameter:
--- !u!1101 &1101252446247485774
AnimatorStateTransition:
  serializedVersion: 3
  m_ObjectHideFlags: 1
  m_PrefabParentObject: {fileID: 0}
  m_PrefabInternal: {fileID: 0}
  m_Name:
  m_Conditions:
  - m_ConditionMode: 6
    m_ConditionEvent: AvatarDirection
    m_EventTreshold: 1
  - m_ConditionMode: 6
    m_ConditionEvent: HandleState
    m_EventTreshold: 0
  m_DstStateMachine: {fileID: 0}
  m_DstState: {fileID: 1102293258282871585}
  m_Solo: 0
  m_Mute: 0
  m_IsExit: 0
  m_TransitionDuration: 0.17647058
  m_TransitionOffset: 0
  m_ExitTime: 0.9
  m_HasExitTime: 0
  m_HasFixedDuration: 0
  m_InterruptionSource: 0
  m_OrderedInterruption: 1
  m_CanTransitionToSelf: 0
--- !u!1101 &1101016336858599777
AnimatorStateTransition:
  serializedVersion: 3
  m_ObjectHideFlags: 1
  m_PrefabParentObject: {fileID: 0}
  m_PrefabInternal: {fileID: 0}
  m_Name:
  m_Conditions:
  - m_ConditionMode: 6
    m_ConditionEvent: AvatarDirection
    m_EventTreshold: 0
  - m_ConditionMode: 6
    m_ConditionEvent: HandleState
    m_EventTreshold: 0
  m_DstStateMachine: {fileID: 0}
  m_DstState: {fileID: 1102317097615913604}
  m_Solo: 0
  m_Mute: 0
  m_IsExit: 0
  m_TransitionDuration: 0.17647058
  m_TransitionOffset: 0
  m_ExitTime: 0.9
  m_HasExitTime: 0
  m_HasFixedDuration: 0
  m_InterruptionSource: 0
  m_OrderedInterruption: 1
  m_CanTransitionToSelf: 0
--- !u!1102 &1102917026716157710
AnimatorState:
  serializedVersion: 5
  m_ObjectHideFlags: 1
  m_PrefabParentObject: {fileID: 0}
  m_PrefabInternal: {fileID: 0}
  m_Name: Idle
  m_Speed: 1
  m_CycleOffset: 0
  m_Transitions:
  - {fileID: 1101124360259242401}
  - {fileID: 1101765600153648604}
  - {fileID: 1101307457958579365}
  - {fileID: 1101004354249854237}
  m_StateMachineBehaviours: []
  m_Position: {x: 250, y: 250, z: 0}
  m_IKOnFeet: 0
  m_WriteDefaultValues: 1
  m_Mirror: 0
  m_SpeedParameterActive: 0
  m_MirrorParameterActive: 0
  m_CycleOffsetParameterActive: 0
  m_Motion: {fileID: 0}
  m_Tag:
  m_SpeedParameter:
  m_MirrorParameter:
  m_CycleOffsetParameter:
--- !u!1101 &1101124360259242401
AnimatorStateTransition:
  serializedVersion: 3
  m_ObjectHideFlags: 1
  m_PrefabParentObject: {fileID: 0}
  m_PrefabInternal: {fileID: 0}
  m_Name:
  m_Conditions:
  - m_ConditionMode: 6
    m_ConditionEvent: AvatarDirection
    m_EventTreshold: 1
  - m_ConditionMode: 6
    m_ConditionEvent: HandleState
    m_EventTreshold: 1
  m_DstStateMachine: {fileID: 0}
  m_DstState: {fileID: 1102623215441320036}
  m_Solo: 0
  m_Mute: 0
  m_IsExit: 0
  m_TransitionDuration: 0.1
  m_TransitionOffset: 0
  m_ExitTime: 0.9
  m_HasExitTime: 0
  m_HasFixedDuration: 0
  m_InterruptionSource: 0
  m_OrderedInterruption: 1
  m_CanTransitionToSelf: 0
--- !u!1101 &1101765600153648604
AnimatorStateTransition:
  serializedVersion: 3
  m_ObjectHideFlags: 1
  m_PrefabParentObject: {fileID: 0}
  m_PrefabInternal: {fileID: 0}
  m_Name:
  m_Conditions:
  - m_ConditionMode: 6
    m_ConditionEvent: AvatarDirection
    m_EventTreshold: 1
  - m_ConditionMode: 6
    m_ConditionEvent: HandleState
    m_EventTreshold: 0
  m_DstStateMachine: {fileID: 0}
  m_DstState: {fileID: 1102293258282871585}
  m_Solo: 0
  m_Mute: 0
  m_IsExit: 0
  m_TransitionDuration: 0.1
  m_TransitionOffset: 0
  m_ExitTime: 0.9
  m_HasExitTime: 0
  m_HasFixedDuration: 0
  m_InterruptionSource: 0
  m_OrderedInterruption: 1
  m_CanTransitionToSelf: 0
--- !u!1101 &1101307457958579365
AnimatorStateTransition:
  serializedVersion: 3
  m_ObjectHideFlags: 1
  m_PrefabParentObject: {fileID: 0}
  m_PrefabInternal: {fileID: 0}
  m_Name:
  m_Conditions:
  - m_ConditionMode: 6
    m_ConditionEvent: AvatarDirection
    m_EventTreshold: 0
  - m_ConditionMode: 6
    m_ConditionEvent: HandleState
    m_EventTreshold: 1
  m_DstStateMachine: {fileID: 0}
  m_DstState: {fileID: 1102737246842290716}
  m_Solo: 0
  m_Mute: 0
  m_IsExit: 0
  m_TransitionDuration: 0.1
  m_TransitionOffset: 0
  m_ExitTime: 0.9
  m_HasExitTime: 0
  m_HasFixedDuration: 0
  m_InterruptionSource: 0
  m_OrderedInterruption: 1
  m_CanTransitionToSelf: 0
--- !u!1101 &1101004354249854237
AnimatorStateTransition:
  serializedVersion: 3
  m_ObjectHideFlags: 1
  m_PrefabParentObject: {fileID: 0}
  m_PrefabInternal: {fileID: 0}
  m_Name:
  m_Conditions:
  - m_ConditionMode: 6
    m_ConditionEvent: AvatarDirection
    m_EventTreshold: 0
  - m_ConditionMode: 6
    m_ConditionEvent: HandleState
    m_EventTreshold: 0
  m_DstStateMachine: {fileID: 0}
  m_DstState: {fileID: 1102317097615913604}
  m_Solo: 0
  m_Mute: 0
  m_IsExit: 0
  m_TransitionDuration: 0.1
  m_TransitionOffset: 0
  m_ExitTime: 0.9
  m_HasExitTime: 0
  m_HasFixedDuration: 0
  m_InterruptionSource: 0
  m_OrderedInterruption: 1
  m_CanTransitionToSelf: 0
